# mm_mesh_experiments

./: .gitignore  NatvisFile.natvis  ReadMe.md  mesh.mtl  test.bat  vc.bat  vctk_cad.bat
doc/: bspline_fit.md  minA.docx  minA.mht  x.docx
fusion_script/mesh_bool/: mesh_boolean.manifest  mesh_boolean.py
main/: CMakeLists.txt  VERSION
main/cmake/: ACGCommon.cmake
main/src/App/: CMakeLists.txt  open_file.cc  open_file.hh  vtk_cad.cc
main/src/Base/: CMakeLists.txt  basic_type.hh  lookup_list.cc  lookup_list.hh
main/src/Boolean/: CMakeLists.txt  boolean.cc  boolean.hh  edge_edge.cc  edge_vertex.cc  face_edge.cc  face_face.cc  face_intersections.cc  face_intersections.hh  face_vertex.cc  priv.hh  remove_degeneracies.cc  selection.cc  simplify.cc  vertex_vertex.cc
main/src/Geo/: CMakeLists.txt  area.cc  area.hh  bspline_fiting.cc  bspline_fiting.hh  combinations.hh  entity.cc  entity.hh  evalnurbs.hh  geo_function.hh  iterate.hh  kd-tree.cc  kd-tree.hh  kdtree.hh  linear_system.cc  linear_system.hh  linking_number.cc  linking_number.hh  make_curve.cc  minsphere.h  minsphere.hh  plane_fitting.cc  plane_fitting.hh  point_fitting.cc  point_fitting.hh  point_in_polygon.cc  point_in_polygon.hh  polynomial_solver.cc  polynomial_solver.hh  pow.hh  range.hh  tolerance.hh  vector.cc  vector.hh
main/src/Import/: CMakeLists.txt  import.hh  load_obj .cc  save_obj.cc
main/src/MeshBooleanApp/: CMakeLists.txt  main.cc
main/src/MeshFlatten/: CMakeLists.txt  triangle_flatten.cc  triangle_flatten.hh
main/src/Offset/: CMakeLists.txt  geodesic.cc  geodesic.hh
main/src/PolygonTriangularization/: CMakeLists.txt  area.cc  area.hh  circular.hh  geo_max_min.hh  geo_vector.hh  poly_triang.cc  poly_triang.hh  statistics.hh
main/src/Topology/: CMakeLists.txt  connect.cc  connect.hh  geom.cc  geom.hh  impl.cc  impl.hh  iterator.cc  iterator.hh  merge.cc  merge.hh  persistence.cc  persistence.hh  same.cc  same.hh  saver.cc  saver.hh  shared.hh  split.cc  split.hh  split_chain.cc  split_chain.hh  subtype.hh  topology.cc  topology.hh
main/src/UnitTest/: .gitignore  CMakeLists.txt  base_containers.cc  bspline_fit.cc  containement_test.cc  equivalent_relation.cc  fit_plane.cc  geodesic.cc  kd-tree_test.cc  link_number_test.cc  main.cc  nurbs_eval.cc  persistence.cc  poly_root.cc  poly_triangularization.cc  topo_split.cc  topo_test.cc  topology_help.cc  topology_help.hh  topology_test.cc  unit_test_main.cc  util_graph.cc
main/src/Utils/: CMakeLists.txt  bindata.hh  circular.hh  continement_tree.hh  enum.cc  enum.hh  equivalence_relation.hh  error_handling.hh  graph.cc  graph.hh  index.hh  merger.hh  statistics.hh
